# first_step

./: BiggerAndEqualThen.cpp  BiggerAndEqualThen.h  BiggerThen.cpp  BiggerThen.h  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.h  DataReaderServer.cpp  DataReaderServer.h  Div.cpp  Div.h  EqualThen.cpp  EqualThen.h  Expression.h  Lexer.cpp  Lexer.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  NotEqualThen.cpp  NotEqualThen.h  Number.cpp  Number.h  Parser.cpp  Parser.h  Plus.cpp  Plus.h  ShuntingYard.cpp  ShuntingYard.h  SmallerAndEqualThen.cpp  SmallerAndEqualThen.h  SmallerThen.cpp  SmallerThen.h  commandsfile.txt  conditionParser.cpp  conditionParser.h  connectCommand.cpp  connectCommand.h  (+20 more)
